DROP DATABASE IF EXISTS shumishumi;

CREATE DATABASE shumishumi;

USE shumishumi;

CREATE TABLE item_categories (
    category_id VARCHAR(255) NOT NULL,
    category_name VARCHAR(255) UNIQUE NOT NULL,
    gmt_create TIMESTAMP NOT NULL DEFAULT NOW(),
    gmt_modified TIMESTAMP NOT NULL DEFAULT NOW() ON UPDATE NOW(),
    PRIMARY KEY (category_id)
);

CREATE TABLE hobbies (
    hobby_id VARCHAR(255) NOT NULL,
    hobby_name VARCHAR(255) UNIQUE NOT NULL,
    gmt_create TIMESTAMP NOT NULL DEFAULT NOW(),
    gmt_modified TIMESTAMP NOT NULL DEFAULT NOW() ON UPDATE NOW(),
    PRIMARY KEY (hobby_id)
);

CREATE TABLE interest_level (
    interest_level_id VARCHAR(255) NOT NULL,
    level_name VARCHAR(255) UNIQUE NOT NULL,
    gmt_create TIMESTAMP NOT NULL DEFAULT NOW(),
    gmt_modified TIMESTAMP NOT NULL DEFAULT NOW() ON UPDATE NOW(),
    PRIMARY KEY (interest_level_id)
);

CREATE TABLE user_roles (
    role_id VARCHAR(255) NOT NULL,
    role_name VARCHAR(255) UNIQUE NOT NULL,
    gmt_create TIMESTAMP NOT NULL DEFAULT NOW(),
    gmt_modified TIMESTAMP NOT NULL DEFAULT NOW() ON UPDATE NOW(),
    PRIMARY KEY (role_id)
);

CREATE TABLE users (
    user_id VARCHAR(255) NOT NULL,
    role_id VARCHAR(255) NOT NULL,
    email VARCHAR(255) UNIQUE NOT NULL,
    phone_number VARCHAR(255) UNIQUE NOT NULL,
    username VARCHAR(255) NOT NULL,
    gender VARCHAR(255) NOT NULL,
    date_of_birth TIMESTAMP NOT NULL,
    location VARCHAR(512) DEFAULT "",
    profile_picture VARCHAR(255),
    password VARCHAR(255) NOT NULL,
    review DOUBLE DEFAULT 0,
    is_active BOOLEAN DEFAULT false,
    is_deleted BOOLEAN DEFAULT false,
    extend_info VARCHAR(2048) DEFAULT "",
    gmt_create TIMESTAMP NOT NULL DEFAULT NOW(),
    gmt_modified TIMESTAMP NOT NULL DEFAULT NOW() ON UPDATE NOW(),
    PRIMARY KEY (user_id),
    FOREIGN KEY (role_id) REFERENCES user_roles (role_id)
);

CREATE TABLE posts (
    post_id VARCHAR(255) NOT NULL,
    user_id VARCHAR(255) NOT NULL,
    title VARCHAR(255) NOT NULL,
    content LONGTEXT,
    images VARCHAR(1024),
    tags VARCHAR(1024) NOT NULL,
    is_deleted BOOLEAN NOT NULL DEFAULT false,
    gmt_create TIMESTAMP NOT NULL DEFAULT NOW(),
    gmt_modified TIMESTAMP NOT NULL DEFAULT NOW() ON UPDATE NOW(),
    PRIMARY KEY (post_id),
    FOREIGN KEY (user_id) REFERENCES users (user_id)
);

CREATE TABLE items (
    item_id VARCHAR(255) NOT NULL,
    item_name VARCHAR(255) NOT NULL,
    item_price INT NOT NULL,
    item_images VARCHAR(1024),
    item_description LONGTEXT NOT NULL,
    item_quantity INT NOT NULL,
    post_id VARCHAR(255) NOT NULL,
    merchant_id VARCHAR(255) NOT NULL,
    category_id VARCHAR(255) NOT NULL,
    hobby_id VARCHAR(255) NOT NULL,
    merchant_level_id VARCHAR(255) NOT NULL,
    user_level_id VARCHAR(255),
    review DOUBLE DEFAULT 0,
    is_deleted BOOLEAN NOT NULL DEFAULT false,
    is_approved BOOLEAN NOT NULL DEFAULT false,
    gmt_create TIMESTAMP NOT NULL DEFAULT NOW(),
    gmt_modified TIMESTAMP NOT NULL DEFAULT NOW() ON UPDATE NOW(),
    PRIMARY KEY (item_id),
    FOREIGN KEY (merchant_id) REFERENCES users (user_id),
    FOREIGN KEY (category_id) REFERENCES item_categories (category_id),
    FOREIGN KEY (hobby_id) REFERENCES hobbies (hobby_id),
    FOREIGN KEY (merchant_level_id) REFERENCES interest_level (interest_level_id),
    FOREIGN KEY (post_id) REFERENCES posts (post_id)
);

CREATE TABLE history_items (
    history_item_id VARCHAR(255) NOT NULL,
    item_id VARCHAR(255) NOT NULL,
    item_name VARCHAR(255) NOT NULL,
    item_price INT NOT NULL,
    item_images VARCHAR(1024) NOT NULL,
    item_description LONGTEXT NOT NULL,
    merchant_id VARCHAR(255) NOT NULL,
    category_id VARCHAR(255) NOT NULL,
    hobby_id VARCHAR(255) NOT NULL,
    merchant_level_id VARCHAR(255) NOT NULL,
    user_level_id VARCHAR(255),
    gmt_create TIMESTAMP NOT NULL DEFAULT NOW(),
    gmt_modified TIMESTAMP NOT NULL DEFAULT NOW() ON UPDATE NOW(),
    PRIMARY KEY (history_item_id),
    FOREIGN KEY (item_id) REFERENCES items (item_id),
    FOREIGN KEY (merchant_id) REFERENCES users (user_id),
    FOREIGN KEY (category_id) REFERENCES item_categories (category_id),
    FOREIGN KEY (hobby_id) REFERENCES hobbies (hobby_id),
    FOREIGN KEY (merchant_level_id) REFERENCES interest_level (interest_level_id),
    FOREIGN KEY (user_level_id) REFERENCES interest_level (interest_level_id)
);

CREATE TABLE sessions (
    session_id VARCHAR(255) NOT NULL,
    user_id VARCHAR(255) NOT NULL,
    session_dt TIMESTAMP NOT NULL,
    is_active BOOLEAN DEFAULT true,
    is_remembered BOOLEAN DEFAULT false,
    gmt_create TIMESTAMP NOT NULL DEFAULT NOW(),
    gmt_modified TIMESTAMP NOT NULL DEFAULT NOW() ON UPDATE NOW(),
    PRIMARY KEY (session_id),
    FOREIGN KEY (user_id) REFERENCES users (user_id)
);

CREATE TABLE carts (
    item_id VARCHAR(255) NOT NULL,
    user_id VARCHAR(255) NOT NULL,
    quantity INT DEFAULT 1,
    selected boolean DEFAULT false,
    gmt_create TIMESTAMP NOT NULL DEFAULT NOW(),
    gmt_modified TIMESTAMP NOT NULL DEFAULT NOW() ON UPDATE NOW(),
    PRIMARY KEY (item_id, user_id),
    FOREIGN KEY (item_id) REFERENCES items (item_id),
    FOREIGN KEY (user_id) REFERENCES users (user_id)
);

CREATE TABLE transaction (
    transaction_id VARCHAR(255) NOT NULL,
    user_id VARCHAR(255) NOT NULL,
    price INT NOT NULL,
    payment_type VARCHAR(255),
    midtrans_id VARCHAR(255),
    midtrans_link VARCHAR(255),
    `status` VARCHAR(255) NOT NULL DEFAULT "INIT",
    gmt_create TIMESTAMP NOT NULL DEFAULT NOW(),
    gmt_modified TIMESTAMP NOT NULL DEFAULT NOW() ON UPDATE NOW(),
    PRIMARY KEY (transaction_id),
    FOREIGN KEY (user_id) REFERENCES users (user_id)
);

CREATE TABLE transaction_details (
    transaction_detail_id VARCHAR(255) NOT NULL,
    transaction_id VARCHAR(255) NOT NULL,
    history_item_id VARCHAR(255) NOT NULL,
    quantity INT NOT NULL DEFAULT 1,
    gmt_create TIMESTAMP NOT NULL DEFAULT NOW(),
    gmt_modified TIMESTAMP NOT NULL DEFAULT NOW() ON UPDATE NOW(),
    PRIMARY KEY (transaction_detail_id),
    FOREIGN KEY (history_item_id) REFERENCES history_items (history_item_id),
    FOREIGN KEY (transaction_id) REFERENCES transaction (transaction_id)
);

CREATE TABLE wishlists (
    user_id VARCHAR(255) NOT NULL,
    item_id VARCHAR(255) NOT NULL,
    gmt_create TIMESTAMP NOT NULL DEFAULT NOW(),
    gmt_modified TIMESTAMP NOT NULL DEFAULT NOW() ON UPDATE NOW(),
    PRIMARY KEY (user_id, item_id),
    FOREIGN KEY (user_id) REFERENCES users (user_id),
    FOREIGN KEY (item_id) REFERENCES items (item_id)
);

CREATE TABLE reviews (
    review_id VARCHAR(255) NOT NULL,
    star INT DEFAULT -1,
    item_id VARCHAR(255) NOT NULL,
    user_id VARCHAR(255) NOT NULL,
    merchant_id VARCHAR(255) NOT NULL,
    interest_level VARCHAR(255),
    description LONGTEXT,
    review_images VARCHAR(1024),
    need_review BOOLEAN NOT NULL DEFAULT true,
    gmt_create TIMESTAMP NOT NULL DEFAULT NOW(),
    gmt_modified TIMESTAMP NOT NULL DEFAULT NOW() ON UPDATE NOW(),
    PRIMARY KEY (review_id),
    FOREIGN KEY (user_id) REFERENCES users (user_id),
    FOREIGN KEY (merchant_id) REFERENCES users (user_id),
    FOREIGN KEY (item_id) REFERENCES items (item_id),
    FOREIGN KEY (interest_level) REFERENCES interest_level (interest_level_id)
);

CREATE TABLE comments (
    comment_id VARCHAR(255) NOT NULL,
    user_id VARCHAR(255) NOT NULL,
    reply_comment_id VARCHAR(255),
    reply_post_id VARCHAR(255),
    content LONGTEXT NOT NULL,
    is_deleted BOOLEAN NOT NULL DEFAULT false,
    gmt_create TIMESTAMP NOT NULL DEFAULT NOW(),
    gmt_modified TIMESTAMP NOT NULL DEFAULT NOW() ON UPDATE NOW(),
    PRIMARY KEY (comment_id),
    FOREIGN KEY (user_id) REFERENCES users (user_id),
    FOREIGN KEY (reply_post_id) REFERENCES posts (post_id),
    FOREIGN KEY (reply_comment_id) REFERENCES comments (comment_id)
);

CREATE TABLE post_upvotes (
    user_id VARCHAR(255) NOT NULL,
    post_id VARCHAR(255) NOT NULL,
    value INT DEFAULT 0,
    gmt_create TIMESTAMP NOT NULL DEFAULT NOW(),
    gmt_modified TIMESTAMP NOT NULL DEFAULT NOW() ON UPDATE NOW(),
    PRIMARY KEY (user_id, post_id),
    FOREIGN KEY (user_id) REFERENCES users (user_id),
    FOREIGN KEY (post_id) REFERENCES posts (post_id)
);

CREATE TABLE comment_upvotes (
    user_id VARCHAR(255) NOT NULL,
    comment_id VARCHAR(255) NOT NULL,
    value INT DEFAULT 0,
    gmt_create TIMESTAMP NOT NULL DEFAULT NOW(),
    gmt_modified TIMESTAMP NOT NULL DEFAULT NOW() ON UPDATE NOW(),
    PRIMARY KEY (user_id, comment_id),
    FOREIGN KEY (user_id) REFERENCES users (user_id),
    FOREIGN KEY (comment_id) REFERENCES comments (comment_id)
);

CREATE TABLE post_reports (
    report_id VARCHAR(255) NOT NULL,
    user_id VARCHAR(255) NOT NULL,
    post_id VARCHAR(255) NOT NULL,
    report_desc VARCHAR(255),
    gmt_create TIMESTAMP NOT NULL DEFAULT NOW(),
    gmt_modified TIMESTAMP NOT NULL DEFAULT NOW() ON UPDATE NOW(),
    PRIMARY KEY (report_id),
    FOREIGN KEY (user_id) REFERENCES users (user_id),
    FOREIGN KEY (post_id) REFERENCES posts (post_id)
);

CREATE TABLE comment_reports (
    report_id VARCHAR(255) NOT NULL,
    user_id VARCHAR(255) NOT NULL,
    comment_id VARCHAR(255) NOT NULL,
    report_desc VARCHAR(255),
    gmt_create TIMESTAMP NOT NULL DEFAULT NOW(),
    gmt_modified TIMESTAMP NOT NULL DEFAULT NOW() ON UPDATE NOW(),
    PRIMARY KEY (report_id),
    FOREIGN KEY (user_id) REFERENCES users (user_id),
    FOREIGN KEY (comment_id) REFERENCES comments (comment_id)
);

CREATE TABLE clients (
    client_id VARCHAR(255) NOT NULL,
    client_name VARCHAR(255) NOT NULL,
    client_secret VARCHAR(255) NOT NULL,
    gmt_create TIMESTAMP NOT NULL DEFAULT NOW(),
    gmt_modified TIMESTAMP NOT NULL DEFAULT NOW() ON UPDATE NOW(),
    PRIMARY KEY (client_id)
);

CREATE TABLE otp_types (
    type_id VARCHAR(255) NOT NULL,
    otp_type VARCHAR(255) NOT NULL,
    gmt_create TIMESTAMP NOT NULL DEFAULT NOW(),
    gmt_modified TIMESTAMP NOT NULL DEFAULT NOW() ON UPDATE NOW(),
    PRIMARY KEY (type_id)
);

CREATE TABLE otps (
    otp_id VARCHAR(255) NOT NULL,
    otp VARCHAR(255) NOT NULL,
    otp_dt TIMESTAMP NOT NULL,
    type_id VARCHAR(255) NOT NULL,
    email VARCHAR(255) NOT NULL,
    is_active BOOLEAN NOT NULL DEFAULT true,
    gmt_create TIMESTAMP NOT NULL DEFAULT NOW(),
    gmt_modified TIMESTAMP NOT NULL DEFAULT NOW() ON UPDATE NOW(),
    PRIMARY KEY (otp_id),
    FOREIGN KEY (type_id) REFERENCES otp_types (type_id)
);

CREATE TABLE contents (
    content_name VARCHAR(255) NOT NULL,
    content LONGTEXT NOT NULL,
    gmt_create TIMESTAMP NOT NULL DEFAULT NOW(),
    gmt_modified TIMESTAMP NOT NULL DEFAULT NOW() ON UPDATE NOW(),
    PRIMARY KEY (content_name)
);

CREATE TABLE dictionaries (
    dictionary_name VARCHAR(255) NOT NULL,
    display_name VARCHAR(255) NOT NULL,
    dictionary_type VARCHAR(255) NOT NULL,
    gmt_create TIMESTAMP NOT NULL DEFAULT NOW(),
    gmt_modified TIMESTAMP NOT NULL DEFAULT NOW() ON UPDATE NOW(),
    PRIMARY KEY (dictionary_name)
);

CREATE TABLE activities (
    activity_id VARCHAR(255) NOT NULL,
    user_id VARCHAR(255) NOT NULL,
    activity_value int DEFAULT 0,
    activity VARCHAR(255) NOT NULL,
    gmt_create TIMESTAMP NOT NULL DEFAULT NOW(),
    gmt_modified TIMESTAMP NOT NULL DEFAULT NOW() ON UPDATE NOW(),
    PRIMARY KEY (activity_id),
    FOREIGN KEY (user_id) REFERENCES users (user_id)
);

CREATE TABLE knowledges (
    knowledge_key VARCHAR(255) NOT NULL,
    knowledge_type VARCHAR(255) NOT NULL,
    knowledge VARCHAR(4096) DEFAULT "",
    gmt_create TIMESTAMP NOT NULL DEFAULT NOW(),
    gmt_modified TIMESTAMP NOT NULL DEFAULT NOW() ON UPDATE NOW(),
    PRIMARY KEY (knowledge_type, knowledge_key)
);

CREATE TABLE images (
    image_id VARCHAR(255) NOT NULL,
    image_name VARCHAR(255) NOT NULL,
    image_ext VARCHAR(255) NOT NULL,
    image LONGBLOB NOT NULL,
    gmt_create TIMESTAMP NOT NULL DEFAULT NOW(),
    gmt_modified TIMESTAMP NOT NULL DEFAULT NOW() ON UPDATE NOW(),
    PRIMARY KEY (image_id)
);

CREATE TABLE reset_password (
    uuid VARCHAR(255) NOT NULL,
    email VARCHAR(255) NOT NULL,
    expired_time VARCHAR(255) NOT NULL,
    is_active BOOLEAN NOT NULL DEFAULT TRUE,
    gmt_create TIMESTAMP NOT NULL DEFAULT NOW(),
    gmt_modified TIMESTAMP NOT NULL DEFAULT NOW() ON UPDATE NOW(),
    PRIMARY KEY (uuid)
);

CREATE TABLE email_encrypt (
    uuid VARCHAR(255) NOT NULL,
    email VARCHAR(255) NOT NULL,
    gmt_create TIMESTAMP NOT NULL DEFAULT NOW(),
    gmt_modified TIMESTAMP NOT NULL DEFAULT NOW() ON UPDATE NOW(),
    PRIMARY KEY (uuid)
);

INSERT INTO
    knowledges (knowledge_key, knowledge_type)
VALUES
    ("KNOWLEDGE_MERCHANT_LEVEL", "BEGINNER"),
    ("KNOWLEDGE_MERCHANT_LEVEL", "INTERMEDIATE"),
    ("KNOWLEDGE_MERCHANT_LEVEL", "ENTHUSIAST"),
    ("KNOWLEDGE_USER_LEVEL", "BEGINNER"),
    ("KNOWLEDGE_USER_LEVEL", "INTERMEDIATE"),
    ("KNOWLEDGE_USER_LEVEL", "ENTHUSIAST");

INSERT INTO
    user_roles (role_id, role_name)
VALUES
    ("8e6993f7-356f-4a77-9cbb-bffbde74f5fc", "USER"),
    (
        "5e462578-658c-4e40-8f06-4125f8aa413e",
        "MERCHANT"
    ),
    ("ccde9d0c-eb08-482b-b2ee-76fcf2f47ef7", "ADMIN");

INSERT INTO
    clients (client_id, client_name, client_secret)
VALUES
    (
        "6b8d6ac7-dc63-41ed-bb99-fba0ebcdc543",
        "postman",
        "Ev^gBi6URjKfL&z3&mjVV4f9$yHsvTtZ"
    ),
    (
        "dbf0201e-23a0-446b-8db3-40b1b6ed7c1f",
        "manuel",
        "dycvervbrngjwhryugwduo"
    );

INSERT INTO
    otp_types (type_id, otp_type)
VALUES
    (
        "a2c82a3b-620e-442f-b3a5-9e55f068e68b",
        "USER_ACTIVATION"
    ),
    (
        "3af59f24-f0e0-4a28-8184-816a3d99820e",
        "FORGOT_PASSWORD"
    );

INSERT INTO
    interest_level (interest_level_id, level_name)
VALUES
    ("1", "BEGINNER"),
    ("3", "INTERMEDIATE"),
    ("5", "ENTHUSIAST");

INSERT INTO
    dictionaries (dictionary_name, display_name, dictionary_type)
VALUES
    ("GENDER_MALE", "Male", "GENDER"),
    ("GENDER_FEMALE", "Female", "GENDER"),
    ("GENDER_OTHER", "Other", "GENDER"),
    ("ITEM_SORTING_PRICE", "Price", "ITEM_SORTING"),
    (
        "ITEM_SORTING_NAME",
        "Alphabetical",
        "ITEM_SORTING"
    ),
    (
        "ITEM_SORTING_REVIEW",
        "Review",
        "ITEM_SORTING"
    ),
    (
        "ITEM_SORTING_INTEREST_LEVEL",
        "Interest level",
        "ITEM_SORTING"
    ),
    (
        "SORTING_TYPE_DESC",
        "Descending",
        "SORTING_TYPE"
    ),
    ("SORTING_TYPE_ASC", "Ascending", "SORTING_TYPE"),
    (
        "PAYMENT_BNI_VIRTUAL_ACCOUNT",
        "BNI Virtual Account",
        "PAYMENT"
    ),
    (
        "PAYMENT_BCA_VIRTUAL_ACCOUNT",
        "BCA Virtual Account",
        "PAYMENT"
    ),
    (
        "TRANSACTION_STATUS_INIT",
        "Init",
        "TRANSACTION_STATUS"
    ),
    (
        "TRANSACTION_STATUS_WAITING_PAYMENT",
        "Waiting Payment",
        "TRANSACTION_STATUS"
    ),
    (
        "TRANSACTION_STATUS_ONGOING",
        "Ongoing",
        "TRANSACTION_STATUS"
    ),
    (
        "TRANSACTION_STATUS_DONE",
        "Done",
        "TRANSACTION_STATUS"
    ),
    (
        "TRANSACTION_STATUS_CANCELED",
        "Canceled",
        "TRANSACTION_STATUS"
    );

INSERT INTO
    contents (content_name, content)
VALUES
    (
        "RESET_PASSWORD_URL_FORMAT",
        "%s/user/reset?q=%s"
    ),
    (
        "OTP_EMAIL_SUBJECT",
        "Shumishumi Verification Email"
    ),
    (
        "RESET_PASSWORD_SUBJECT",
        "Shumishumi Reset Password Request"
    ),
    (
        "OTP_EMAIL",
        '<body style="background-color:#d8dee9"><table align="center" border="0" cellpadding="0" cellspacing="0" width="800" bgcolor="white" style="border:2px solid #000;border-radius:20px"><tbody><tr><td align="center" bgcolor="#008ec4" style="border-top-left-radius:20px;border-top-right-radius:20px"><table align="center" border="0" cellpadding="0" cellspacing="0" class="col-550" width="800" style="padding:10px"><tbody><tr><td align="center"><img src="https://i.imgur.com/U4gwHUE.png" alt="logo" height="85px" width="auto"><p style="color:#fff;font-weight:700;font-size:30px;font-family:\'Lucida Sans\',\'Lucida Sans Regular\',\'Lucida Grande\',\'Lucida Sans Unicode\',Geneva,Verdana,sans-serif;margin:auto">Welcome to ShumiShumi!</p></td></tr></tbody></table></td></tr><tr style="height:300px"><td align="center" style="border:none;border-bottom:2px solid #eceffb;border-bottom-left-radius:20px;border-bottom-right-radius:20px;padding-top:15px;padding-bottom:15px;padding-right:30px;padding-left:30px"><p style="font-family:sans-serif;font-weight:bolder;font-size:30px;letter-spacing:.025em;color:#000">Hello %s!</p><p style="font-family:sans-serif;text-align:left;font-weight:semibold;font-size:18px;letter-spacing:.025em;color:#000;margin:auto">Thank you for choosing <span style="font-weight:700">ShumiShumi</span>!<br><br>To continue the verification process, please use the following code below on the ShumiShumi website:</p><table align="center" border="0" cellpadding="0" cellspacing="0" width="200" bgcolor="white"><tbody><tr><td align="center" style="background-color:#00a9ea;height:50px;border-radius:10px"><p style="font-family:\'Lucida Sans\',\'Lucida Sans Regular\',\'Lucida Grande\',\'Lucida Sans Unicode\',Geneva,Verdana,sans-serif;font-weight:bolder;font-size:25px;letter-spacing:.025em;color:#000">%s</p></td></tr></tbody></table><p style="font-family:sans-serif;text-align:left;font-weight:semibold;font-size:15px;letter-spacing:.025em;color:#000">If you didn\'t request this, you can simply ignore this email or let us know. Thanks!<br><br>Best Regards,<br>ShumiShumi Teams</p><hr><p style="text-align:left;color:gray">ShumiShumi Application<br>Indonesia</p></td></tr></tbody></table></body>'
    ),
    (
        "RESET_PASSWORD_EMAIL",
        '<body style="background-color:#d8dee9"><table align="center" border="0" cellpadding="0" cellspacing="0" width="800" bgcolor="white" style="border:2px solid #000;border-radius:20px"><tbody><tr><td align="center" bgcolor="#008ec4" style="border-top-left-radius:20px;border-top-right-radius:20px"><table align="center" border="0" cellpadding="0" cellspacing="0" class="col-550" width="800" style="padding:10px"><tbody><tr><td align="center"><img src="https://i.imgur.com/U4gwHUE.png" alt="logo" height="85px" width="auto"><p style="color:#fff;font-weight:700;font-size:25px;font-family:\'Lucida Sans\',\'Lucida Sans Regular\',\'Lucida Grande\',\'Lucida Sans Unicode\',Geneva,Verdana,sans-serif;margin:auto">You have requested to reset your password!</p></td></tr></tbody></table></td></tr><tr style="height:300px"><td align="center" style="border:none;border-bottom:2px solid #eceffb;border-bottom-left-radius:20px;border-bottom-right-radius:20px;padding-top:15px;padding-bottom:15px;padding-right:30px;padding-left:30px"><p style="font-family:sans-serif;font-weight:bolder;font-size:30px;letter-spacing:.025em;color:#000">Hello %s!</p><p style="font-family:sans-serif;text-align:left;font-weight:semibold;font-size:18px;letter-spacing:.025em;color:#000;margin:auto">It seems that you have forgotten your password for your <span style="font-weight:700">ShumiShumi</span>\'s account<br><br>To reset your password, please follow the link that we have provided below:</p><table align="center" border="0" cellpadding="0" cellspacing="0" bgcolor="white"><tbody><tr><td align="center" style="padding-top:15px"><p style="font-family:Verdana,Geneva,Tahoma,sans-serif;font-weight:200;font-size:14px;color:#00f">%s</p></td></tr></tbody></table><p style="font-family:sans-serif;text-align:left;font-weight:semibold;font-size:15px;letter-spacing:.025em;color:#000">If you didn\'t request this, you can simply ignore this email or let us know. Thanks!<br><br>Best Regards,<br>ShumiShumi Teams</p><hr><p style="text-align:left;color:gray">ShumiShumi Application<br>Indonesia</p></td></tr></tbody></table></body>'
    );
