@startuml erd

left to right direction
skinparam linetype ortho

entity item_categories {
    * category_id : varchar(255) <<generated>>
    --
    * category_name : varchar(255)
    * gmt_create : timestamp
    * gmt_modified : timestamp
}

entity hobbies {
    * hobby_id : varchar(255) <<generated>>
    --
    * hobby_name : varchar(255)
    * gmt_create : timestamp
    * gmt_modified : timestamp
}

entity interest_level {
    * interest_level_id : varchar(255) <<generated>>
    --
    * level_name : varchar(255)
    * gmt_create : timestamp
    * gmt_modified : timestamp
}

entity user_roles {
    * role_id : varchar(255) <<generated>>
    --
    * role_name : varchar(255)
    * gmt_create : timestamp
    * gmt_modified : timestamp
}

entity users {
    * user_id : varchar(255) <<generated>>
    --
    * role_id : varchar(255) <<PK>>
    * email : varchar(255) <<UNIQUE>>
    * phone_number : varchar(255) <<UNIQUE>>
    * username : varchar(255) <<UNIQUE>>
    * gender : varchar(255)
    * date_of_birth : timestamp
    * password : varchar(255)
      location : varchar(255)
      profile_picture : varchar(255)
    * review : double
    * is_active : boolean
    * is_deleted : boolean
    * gmt_create : timestamp
    * gmt_modified : timestamp
}

entity items {
    * item_id : varchar(255) <<generated>>
    --
    * item_name : varchar(255)
    * item_price : number(10)
    * item_images : varchar(255)
    * item_description : longtext
    * item_quantity : number(10)
    * merchant_id : varchar(255) <<FK>>
    * category_id : varchar(255) <<FK>>
    * hobby_id : varchar(255) <<FK>>
    * merchant_level_id : varchar(255) <<FK>>
      user_level_id : varchar(255) <<FK>>
    * review : double
    * is_deleted : boolean
    * gmt_create : timestamp
    * gmt_modified : timestamp
}

entity history_items {
    * history_items : varchar(255) <<generated>>
    --
    * item_id : varchar(255) <<FK>>
    * item_name : varchar(255)
    * item_price : number(10)
    * item_images : varchar(255)
    * item_descriptio : longtext
    * item_quantity : number(10)
    * merchant_id : varchar(255) <<FK>>
    * category_id : varchar(255) <<FK>>
    * hobbby_id : varchar(255) <<FK>>
    * merchant_level_id : varchar(255) <<FK>>
      user_level_id : varchar(255) <<FK>>
    * review : double
    * is_deleted : boolean
    * gmt_create : timestamp
    * gmt_modified : timestamp
}

entity sessions {
    * session_id : varchar(255) <<generated>>
    --
    * user_id : varchar(255) <<FK>>
    * session_dt : timestamp
    * is_active : boolean
    * is_remembered : boolean
    * gmt_create : timestamp
    * gmt_modified : timestamp
}

entity cart {
    * item_id : varchar(255) <<FK>>
    * user_id : varchar(255) <<FK>>
    --
    * quantity : number(10)
    * selected : boolean
    * gmt_create : timestamp
    * gmt_modified : timestamp
}

entity transactions {
    * trx_id : varchar(255) <<generated>>
    --
    * user_id : varchar(255) <<FK>>
    * price : number(10)
      payment_type : varchar(255)
      midtrans_id : varchar(255)
      midtrans_link : varchar(255)
    * status : varchar(255)
    * gmt_create : timestamp
    * gmt_modified : timestamp
}

entity transaction_detail{
    * trx_detail_id : varchar(255) <<generated>>
    --
    * trx_id : varchar(255) <<FK>>
    * history_item_id : varchar(255) <<FK>>
    * quantity : int 
    * gmt_create : timestamp
    * gmt_modified : timestamp
}

entity wishlist {
    * item_id : varchar(255) <<FK>>
    * user_id : varchar(255) <<FK>>
    --
    * gmt_create : timestamp
    * gmt_modified : timestamp
}

entity reviews {
    * review_id : varchar(255) <<generated>>
    --
    * star : int
    * item_id : varchar(255) <<FK>>
    * user_id : varchar(255) <<FK>>
    * merchant_id : varchar(255) <<FK>>
      interest_level : varchar(255) <<FK>>
      description : longtext
      review_images : varchar(255)
    * need_review : boolean
    * gmt_create : timestamp
    * gmt_modified : timestamp
}

entity comment {
    * comment_id : varchar(255) <<generated>>
    --
    * user_id : varchar(255) <<PK>>
      reply_comment_id : varchar(255) <<PK>>
      reply_item_id : varchar(255) <<PK>>
    * content : longtext
    * is_deleted : boolean
    * gmt_create : timestamp
    * gmt_modified : timestamp
}

entity clients {
    * client_id : varchar(255) <<generated>>
    --
    * client_name : varchar(255)
    * client_secret : varchar(255)
    * gmt_create : timestamp
    * gmt_modified : timestamp
}

entity otp {
    * otp_id : varchar(255) <<generated>>
    --
    * otp : varchar(255) 
    * otp_dt : timestamp
    * otp_type : varchar(255)
    * email : varchar(255)
    * is_active : boolean
    * gmt_create : timestamp
    * gmt_modified : timestamp
}

entity contents {
    * content_name : varchar(255)
    --
    * content : longtext
    * gmt_create : timestamp
    * gmt_modified : timestamp
}

entity dictionaries {
    * dictionary_name : varchar(255)
    --
    * dictionary_type : varchar(255)
    * display_name : varchar(255)
    * gmt_create : timestamp
    * gmt_modified : timestamp
}

entity activities {
    * activity_id : varchar(255) <<generated>>
    --
    * user_id : varchar(255) <<FK>>
    * activity_value : int
    * activity : varchar(255)
    * gmt_create : timestamp
    * gmt_modified : timestamp
}

entity knowledge {
    * knowledge_key : varchar(255)
    --
    * knowledge_type : varchar(255)
    * knowledge : varchar(255)
    * gmt_create : timestamp
    * gmt_modified : timestamp
}

entity images {
    * image_id : varchar(255)
    --
    * image_name : varchar(255)
    * image_ext : varchar(255)
    * image : longblob
    * gmt_create : timestamp
    * gmt_modified : timestamp
}

entity reset_password {
    * uuid : varchar(255) <<generated>>
    --
    * email : varchar(255)
    * expired_time : timestamp
    * is_active : boolean
    * gmt_create : timestamp
    * gmt_modified : timestamp
}

entity email_encrypt{
    * uuid : varchar(255) <<generated>>
    --
    * email : varchar(255) 
    * gmt_create : timestamp
    * gmt_modified : timestamp
}

users }o-|| user_roles

items }o--|| hobbies
items }o--|| interest_level
item_categories ||--o{ items
users ||--o{ items

items ||-o{ history_items

item_categories ||--o{ history_items
hobbies ||--o{ history_items
interest_level ||--o{ history_items
users ||--o{ history_items

users ||-o{ sessions

items ||--o{ cart
users ||--o{ cart
' cart }o-|| users

' users ||--o{ transactions
transactions }o--|| users
transaction_detail }|--|| transactions
' transactions ||-|{ transaction_detail

transaction_detail ||--|| history_items

items ||-o{ wishlist
users ||-o{ wishlist

reviews }o-|| users
reviews }o-|| items
interest_level ||--o{ reviews

comment }o--o| comment
comment }o-|| users
comment }o-|| items

activities }o--|| users

@enduml
